# SmartPhotoMultiTag_pipeline

./: .flake8  .gitignore  EVALUATION_PIPELINE.md  QUICK_START_GUIDE.md  README.md  openquestion.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  main.yml  mainSelfHosted.yml  main_selfHost_Linux.yml  main_selfHost_Win.yml
assets/: 01_dataset_eda_export.html  02_preprocessing_eda_export.html  03_train_model_export_Overfit.html  04_evaluation_report_export.html  CocoDataset_InternalDataFlowe  componentFlow  config_best_model_PhotoNet_10000.yaml  endEndWorkflow  main components  run_report_export_20250622_203842.html  run_report_export_20250623_171944.html  run_report_export_20250623_172446.html  run_report_export_20250623_175144.html  run_report_export_20250623_193046.html
notebooks/: 01_dataset_eda.ipynb  02_preprocessing_eda.ipynb  03_train_model.ipynb  04_evaluation_report.ipynb  05_run_evaluation.ipynb  classification_report.json  evaluation_summary.json  roc_curve.json  run_report.ipynb
scripts/: evaluate_last_run.py  run_download_data.py  run_fiftyone_with_predicted.py  run_pipeline.py  run_train.py
src/: __init__.py  config.py  evaluate.py  train.py
src/data/: __init__.py  cocodataset.py  loader.py
src/models/: PhotoTagNet.py  PhotoTagNet_model.py  basic_model.py  metrics.py  model.py  model_PhotoTagNet.py  pretrain_encoder.py
src/utils/: average_meter.py  metrics.py  plot.py  predict.py  seed.py  train_util.py
tests/: test_config.py  test_integration.py  tests.py
