[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "SmartPhotoMultiTag"
version = "0.1.0"
description = "..."

[tool.setuptools]
packages = ["src"]

[tool.isort]
profile = "black"   # 88-char lines, compatible wrapping
line_length = 88
multi_line_output = 3
include_trailing_comma = true