[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "SmartPhotoMultiTag"
version = "0.1.0"
description = "..."

[tool.setuptools]
packages = ["src"]

# ───── formatters ──────────────────────────────────────────
[tool.black]
line-length = 150

[tool.isort]
profile               = "black"
line_length           = 150
multi_line_output     = 3
include_trailing_comma = true

# ───── Ruff (formatter + linter) ──────────────────────────
[tool.ruff]
line-length = 150 

[tool.ruff.lint]
extend-ignore = ["F821", "E402"]